--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "bc-al-upgradeassistant",
   "displayName": "BC/AL Upgrade Assistant",
   "description": "Assists you in transforming old C/AL and more",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "publisher": "ngSoftware",
+  "icon": "media/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pungggi/bc_al_upgradeassistant"
+  },
   "author": "A. Pungitore <alessandro.pungitore@gmail.com>",
   "engines": {
     "vscode": "^1.80.0"
@@ -12,7 +17,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onStartupFinished"
+    "onLanguage:al"
   ],
   "main": "./src/extension.js",
   "contributes": {
@@ -20,6 +25,10 @@
       {
         "command": "bc_al_upgradeassistant.showMessage",
         "title": "Show Selected Text"
+      },
+      {
+        "command": "bc_al_upgradeassistant.refreshExtensionInfoCache",
+        "title": "AL: Refresh Extension Info Cache"
       }
     ],
     "menus": {
