--- a/package.json
+++ b/package.json
@@ -32,6 +32,21 @@
 				"command": "bc-al-upgradeassistant.selectClaudePrompt",
 				"title": "Run Claude AI Prompt",
 				"category": "BC AL Upgrade Assistant"
+			},
+			{
+				"command": "bc-al-upgradeassistant.setModelSONNET",
+				"title": "Set Default Model to Claude 3.5 Sonnet",
+				"category": "BC AL Upgrade Assistant"
+			},
+			{
+				"command": "bc-al-upgradeassistant.setModelOPUS",
+				"title": "Set Default Model to Claude 3 Opus",
+				"category": "BC AL Upgrade Assistant"
+			},
+			{
+				"command": "bc-al-upgradeassistant.setModelHAIKU",
+				"title": "Set Default Model to Claude 3 Haiku",
+				"category": "BC AL Upgrade Assistant"
 			}
 		],
 		"menus": {
@@ -48,6 +63,25 @@
 					"default": "your-claude-api-key",
 					"description": "API Key for accessing Claude API",
 					"scope": "machine"
+				},
+				"bc-al-upgradeassistant.claude.model": {
+					"type": "string",
+					"default": "claude-3-5-haiku-20241022",
+					"description": "Claude model to use for API requests",
+					"enum": [
+						"claude-3-7-sonnet-20250219",
+						"claude-3-5-sonnet-20241022",
+						"claude-3-5-haiku-20241022",
+						"claude-3-opus-20240229",
+						"claude-3-haiku-20240307"
+					],
+					"enumDescriptions": [
+						"Claude 3.7 Sonnet - Most intelligent model",
+						"Claude 3.5 Sonnet - Good balance of performance and cost",
+						"Claude 3.5 Haiku - Fast and efficient for daily tasks",
+						"Claude 3 Opus - Most capable model, highest cost",
+						"Claude 3 Haiku - Original Haiku model"
+					]
 				},
 				"bc-al-upgradeassistant.claude.defaultSystemPrompt": {
 					"type": "string",
@@ -70,6 +104,22 @@
 							"systemPrompt": "You are an AL code reviewer specializing in Business Central best practices.",
 							"userPrompt": "Review the following AL code and suggest improvements for performance and readability:\n\n{{code}}",
 							"example": ""
+						},
+						{
+							"commandName": "explainComplexLogic",
+							"commandDescription": "Explain complex logic using Opus model",
+							"model": "claude-3-opus-20240229",
+							"systemPrompt": "You are an expert AL code explainer for Microsoft Dynamics 365 Business Central.",
+							"userPrompt": "Explain in detail how the following complex algorithm works:\n\n{{code}}",
+							"example": ""
+						},
+						{
+							"commandName": "quickFormat",
+							"commandDescription": "Quick code formatting using Haiku model",
+							"model": "claude-3-haiku-20240307",
+							"systemPrompt": "You are a code formatter that improves readability without changing functionality.",
+							"userPrompt": "Format and improve the indentation of this code without changing its functionality:\n\n{{code}}",
+							"example": ""
 						}
 					],
 					"description": "Collection of prompts for Claude API",
@@ -87,6 +137,24 @@
 							"commandDescription": {
 								"type": "string",
 								"description": "Description of what the command does (shown in the selection dialog)"
+							},
+							"model": {
+								"type": "string",
+								"description": "Specific Claude model to use for this prompt",
+								"enum": [
+									"claude-3-7-sonnet-20250219",
+									"claude-3-5-sonnet-20241022",
+									"claude-3-5-haiku-20241022",
+									"claude-3-opus-20240229",
+									"claude-3-haiku-20240307"
+								],
+								"enumDescriptions": [
+									"Claude 3.7 Sonnet - Most intelligent model",
+									"Claude 3.5 Sonnet - Good balance of performance and cost",
+									"Claude 3.5 Haiku - Fast and efficient for daily tasks",
+									"Claude 3 Opus - Most capable model, highest cost",
+									"Claude 3 Haiku - Original Haiku model"
+								]
 							},
 							"systemPrompt": {
 								"type": "string",
@@ -116,6 +184,7 @@
 	"dependencies": {
 		"glob": "^7.2.3",
 		"node-7z": "^3.0.0",
-		"7zip-bin": "^5.2.0"
+		"7zip-bin": "^5.2.0",
+		"axios": "^1.6.0"
 	}
 }
