--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
 	"icon": "media/icon.png",
 	"publisher": "ngSoftware",
 	"author": "A. Pungitore <alessandro.pungitore@gmail.com>",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pungggi/bc_al_upgradeassistant.git"
+	},
 	"engines": {
 		"vscode": "^1.80.0"
 	},
