--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,3 +2,18 @@
 .vscode-test/**
 .gitignore
 test/**
+node_modules/**
+src/**
+webpack.config.js
+*.vsix
+.github/**
+docs/**
+media/**/*.psd
+media/**/*.ai
+**/*.map
+**/*.ts
+!dist/**
+.eslintrc.json
+.prettierrc
+.python-version
+cline_mcp_settings.json
