--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "bc-al-upgradeassistant",
 	"displayName": "BC/AL Upgrade Assistant",
 	"description": "Assists you in transforming old C/AL and more",
-	"version": "0.0.9",
+	"version": "0.0.10",
 	"icon": "media/icon.png",
 	"publisher": "ngSoftware",
 	"author": "A. Pungitore <alessandro.pungitore@gmail.com>",
@@ -15,7 +15,7 @@
 	"activationEvents": [
 		"onStartupFinished"
 	],
-	"main": "./src/extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
 			{
@@ -175,16 +175,19 @@
 		}
 	},
 	"scripts": {
-		"package": "vsce package --allow-missing-repository",
-		"publish": "vsce publish --allow-missing-repository"
+		"package": "webpack && vsce package --allow-missing-repository",
+		"publish": "webpack && vsce publish --allow-missing-repository"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.80.0"
+		"@types/vscode": "^1.80.0",
+		"ts-loader": "^9.5.2",
+		"webpack": "^5.98.0",
+		"webpack-cli": "^6.0.1"
 	},
 	"dependencies": {
-		"glob": "^7.2.3",
-		"node-7z": "^3.0.0",
 		"7zip-bin": "^5.2.0",
-		"axios": "^1.6.0"
+		"axios": "^1.6.0",
+		"glob": "^7.2.3",
+		"node-7z": "^3.0.0"
 	}
 }
