--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "bc-al-upgradeassistant",
 	"displayName": "BC/AL Upgrade Assistant",
 	"description": "Assists you in transforming old C/AL and more",
-	"version": "0.0.10",
+	"version": "0.0.11",
 	"icon": "media/icon.png",
 	"publisher": "ngSoftware",
 	"author": "A. Pungitore <alessandro.pungitore@gmail.com>",
@@ -175,14 +175,15 @@
 		}
 	},
 	"scripts": {
-		"package": "webpack && vsce package --allow-missing-repository",
-		"publish": "webpack && vsce publish --allow-missing-repository"
+		"publish": "webpack --mode=production && vsce publish --allow-missing-repository"
 	},
 	"devDependencies": {
 		"@types/vscode": "^1.80.0",
+		"javascript-obfuscator": "^4.1.1",
 		"ts-loader": "^9.5.2",
 		"webpack": "^5.98.0",
-		"webpack-cli": "^6.0.1"
+		"webpack-cli": "^6.0.1",
+		"webpack-obfuscator": "^3.5.1"
 	},
 	"dependencies": {
 		"7zip-bin": "^5.2.0",
