--- a/package.json
+++ b/package.json
@@ -164,7 +164,9 @@
     }
   },
   "scripts": {
-    "publish": "webpack --mode=production && vsce publish --allow-missing-repository"
+    "update-main": "node -e \"const fs=require('fs');const pkg=JSON.parse(fs.readFileSync('./package.json'));pkg.main='./dist/extension.js';fs.writeFileSync('./package.json',JSON.stringify(pkg,null,2))\"",
+    "revert-main": "node -e \"const fs=require('fs');const pkg=JSON.parse(fs.readFileSync('./package.json'));pkg.main='./src/extension.js';fs.writeFileSync('./package.json',JSON.stringify(pkg,null,2))\"",
+    "publish": "npm run update-main && webpack --mode=production && vsce publish --allow-missing-repository && npm run revert-main"
   },
   "devDependencies": {
     "@types/vscode": "^1.80.0",
