--- a/package.json
+++ b/package.json
@@ -171,7 +171,6 @@
   "devDependencies": {
     "@types/vscode": "^1.80.0",
     "javascript-obfuscator": "^4.1.1",
-    "ts-loader": "^9.5.2",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-obfuscator": "^3.5.1"
@@ -179,7 +178,7 @@
   "dependencies": {
     "7zip-bin": "^5.2.0",
     "axios": "^1.6.0",
-    "glob": "^7.2.3",
+    "fast-glob": "^3.3.3",
     "node-7z": "^3.0.0"
   }
 }
