--- a/package.json
+++ b/package.json
@@ -174,8 +174,8 @@
     }
   },
   "scripts": {
-    "prepublish": "node -e \"const fs=require('fs');const pkg=JSON.parse(fs.readFileSync('./package.json'));const versionParts=pkg.version.split('.');const patchVersion=parseInt(versionParts[versionParts.length-1])+1;versionParts[versionParts.length-1]=patchVersion;pkg.version=versionParts.join('.');pkg.main='./dist/extension.js';fs.writeFileSync('./package.json',JSON.stringify(pkg,null,2))\"",
-    "revert-main": "node -e \"const fs=require('fs');const pkg=JSON.parse(fs.readFileSync('./package.json'));pkg.main='./src/extension.js';fs.writeFileSync('./package.json',JSON.stringify(pkg,null,2))\"",
+    "prepublish": "node ./scripts/prepublish.js",
+    "revert-main": "node ./scripts/revert-main.js",
     "publish": "npm run prepublish && webpack --mode=production && vsce publish --allow-missing-repository && npm run revert-main"
   },
   "devDependencies": {
