Symbols.json save again

--- a/package.json
+++ b/package.json
@@ -212,7 +212,7 @@
     }
   },
   "scripts": {
-    "lint": "eslint . --ext .js ",
+    "lint": "eslint .",
     "pre-publish": "node ./scripts/prepublish.js",
     "after-publish": "node ./scripts/afterpublish.js",
     "publish": "npm run pre-publish && webpack --mode=production && vsce publish --allow-missing-repository && npm run after-publish"
