replace node-7z with jszip for file extraction

--- a/package.json
+++ b/package.json
@@ -255,6 +255,6 @@
     "7zip-bin": "^5.1.1",
     "axios": "^1.6.0",
     "glob": "^7.2.3",
-    "node-7z": "^3.0.0"
+    "jszip": "^3.10.0"
   }
 }
